{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 43,
  "lineage": "ad0a00fe-209f-d37d-1bca-ff9ca7547d79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb4e786f15603b0d",
            "arn": "arn:aws:ec2:us-west-2:897639197744:instance/i-05db1435a19dec408",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05db1435a19dec408",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "estudos-rafael-chave-ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-00d018074076c25b3",
            "private_dns": "ip-10-0-1-115.us-west-2.compute.internal",
            "private_ip": "10.0.1.115",
            "public_dns": "ec2-18-237-174-188.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.174.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a0466e544c730772",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014a4c74524dfbb38",
            "tags": {
              "Name": "app_wordpress"
            },
            "tags_all": {
              "Name": "app_wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05629aa0fd4aab6e9"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.tcc-public-1",
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zabbix_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb4e786f15603b0d",
            "arn": "arn:aws:ec2:us-west-2:897639197744:instance/i-0c36420c3f9af6478",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c36420c3f9af6478",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "estudos-rafael-chave-ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0d1894c9855b58fd1",
            "private_dns": "ip-10-0-1-221.us-west-2.compute.internal",
            "private_ip": "10.0.1.221",
            "public_dns": "ec2-34-220-15-199.us-west-2.compute.amazonaws.com",
            "public_ip": "34.220.15.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059f42ef9c5aadfc7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014a4c74524dfbb38",
            "tags": {
              "Name": "zabbix_server"
            },
            "tags_all": {
              "Name": "zabbix_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05629aa0fd4aab6e9"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.tcc-public-1",
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tcc-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897639197744:internet-gateway/igw-0ec03d57d8538c8c6",
            "id": "igw-0ec03d57d8538c8c6",
            "owner_id": "897639197744",
            "tags": {
              "Name": "tcc-gw"
            },
            "tags_all": {
              "Name": "tcc-gw"
            },
            "vpc_id": "vpc-01486c5ee30cbfe36"
          },
          "dependencies": [
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tcc-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897639197744:route-table/rtb-0ab0f8b1aff9fe90b",
            "id": "rtb-0ab0f8b1aff9fe90b",
            "owner_id": "897639197744",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec03d57d8538c8c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tcc-public-1"
            },
            "tags_all": {
              "Name": "tcc-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01486c5ee30cbfe36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tcc-gw",
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tcc-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaa751075fe046f8",
            "route_table_id": "rtb-0ab0f8b1aff9fe90b",
            "subnet_id": "subnet-014a4c74524dfbb38"
          },
          "dependencies": [
            "aws_internet_gateway.tcc-gw",
            "aws_route_table.tcc-public",
            "aws_subnet.tcc-public-1",
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tcc-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0663b4267162f898b",
            "route_table_id": "rtb-0ab0f8b1aff9fe90b",
            "subnet_id": "subnet-08aa103c3a4e12db7"
          },
          "dependencies": [
            "aws_internet_gateway.tcc-gw",
            "aws_route_table.tcc-public",
            "aws_subnet.tcc-public-2",
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897639197744:security-group/sg-05629aa0fd4aab6e9",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05629aa0fd4aab6e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "name_security_group",
            "name_prefix": "",
            "owner_id": "897639197744",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-01486c5ee30cbfe36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tcc-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897639197744:subnet/subnet-0fc3588f99de32336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc3588f99de32336",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897639197744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcc-private-1"
            },
            "tags_all": {
              "Name": "tcc-private-1"
            },
            "vpc_id": "vpc-01486c5ee30cbfe36"
          },
          "dependencies": [
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tcc-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897639197744:subnet/subnet-07525153f90de8be7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07525153f90de8be7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897639197744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcc-private-2"
            },
            "tags_all": {
              "Name": "tcc-private-2"
            },
            "vpc_id": "vpc-01486c5ee30cbfe36"
          },
          "dependencies": [
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tcc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897639197744:subnet/subnet-014a4c74524dfbb38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014a4c74524dfbb38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897639197744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcc-public-1"
            },
            "tags_all": {
              "Name": "tcc-public-1"
            },
            "vpc_id": "vpc-01486c5ee30cbfe36"
          },
          "dependencies": [
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tcc-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897639197744:subnet/subnet-08aa103c3a4e12db7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08aa103c3a4e12db7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897639197744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcc-public-2"
            },
            "tags_all": {
              "Name": "tcc-public-2"
            },
            "vpc_id": "vpc-01486c5ee30cbfe36"
          },
          "dependencies": [
            "aws_vpc.vpc_tcc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tcc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:897639197744:vpc/vpc-01486c5ee30cbfe36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07408c2f5f47973c1",
            "default_route_table_id": "rtb-0eca190b9aba19d89",
            "default_security_group_id": "sg-0d20b294fe046e185",
            "dhcp_options_id": "dopt-1a7a977f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01486c5ee30cbfe36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eca190b9aba19d89",
            "owner_id": "897639197744",
            "tags": {
              "Name": "vpc_tcc"
            },
            "tags_all": {
              "Name": "vpc_tcc"
            }
          }
        }
      ]
    }
  ]
}